# rhombile_tiling_generator

./: .gitignore  README.md  cairo_hexagons.py  color_generators.py  colormind.txt  colormind_outline.txt  hexagon_builder.py  hexes_pointy.py  pyproject.toml  rhombile_tiling.py
src/: cairo_hexagons.py  color_generators.py  hexagon_builder.py  rhombile_tiling.py
