[tool.poetry]
name = "rhombile_tiling_generator"
version = "0.1.0"
description = "Generate SVGs of stacked rhombuses for fun"
authors = ["Wigginns <3180645+Wigginns@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
cairocffi = "^1.2.0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
